--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "description": "A description of my Wing application",
   "author": "Your Name",
   "license": "MIT",
-  "wing": true
+  "wing": true,
+  "dependencies": {
+    "@winglibs/containers": "^0.0.21"
+  }
 }
